--- a/style.css
+++ b/style.css
@@ -25,14 +25,14 @@ main {
 }
 
 .chat-box {
-    min-width: 25%;
+    width: 28%;
     height: 520px;
-    margin-top: 120px;
+    margin-top: 110px;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
     background-color: var(--primary-white);
-    box-shadow: 10px 10px 10px 10px #dddddd, 5px 5px 10px 10px #e3e3e3;
+    box-shadow: 0px 0px 10px 10px #dddddd, 0 0 10px 10px #e3e3e3;
     display: none;
     transition: all 0.3s ease;
 }
@@ -46,7 +46,7 @@ main {
     justify-content: flex-start;
     gap: 10px;
     background-color: var(--primary-blue);
-    padding: 12px;
+    padding: 12px 25px;
     color: var(--primary-white);
 }
 
@@ -71,8 +71,8 @@ main {
 }
 
 .chat-banner h6 {
-    margin: 1px;
-    font-size: 1rem;
+    margin: 2px;
+    font-size: 1.2rem;
     font-weight: 200;
 }
 
@@ -197,8 +197,8 @@ main {
     border: none;
     background-color: var(--primary-blue);
     position: absolute;
-    bottom: 2px;
-    /* top: 95%; */
+    /* bottom: 2px; */
+    top: 89%;
   
 }
 
@@ -206,19 +206,47 @@ main {
     display: none;
 }
 
-@media only screen and  (min-width: 300px) and  (max-width: 430px) and (orientation: portrait) {
+@media only screen and  (min-width: 801px) and  (max-width: 920px) {
     main {
-        padding-right: 25px;
+        padding: 30px;
+        /* justify-content: center; */
+    }
+    .chat-box{
+        width: 50%;
+        margin-top: 50px;
     }
     .button-toggler {
-        bottom: -95px;
+       top: 60%;
+       right: 5%;
     }
 }
 
-
-@media only screen and  (min-width: 300px) and  (max-width: 430px) and (orientation: landscape) {
-
+@media only screen and  (min-width: 431px) and  (max-width: 800px) {
+    main {
+        padding: 30px;
+        justify-content: center;
+    }
+    .chat-box{
+        width: 80%;
+        margin-top: 50px;
+    }
     .button-toggler {
-        bottom: -400px;
+       top: 85%;
+       right: 15%;
+    }
+}
+
+@media only screen and  (min-width: 280px) and  (max-width: 430px) {
+    main {
+        padding: 30px;
+        justify-content: center;
+    }
+    .chat-box{
+        width: 100%;
+        margin-top: 50px;
+    }
+    .button-toggler {
+       top: 93%;
+       right: 10%;
     }
 }
